EXTRA_DIST = $(TESTS) tester.sh
MOSTLYCLEANFILES = core log-*

COMPILER = $(COMPILER_ENV) $(top_builddir)/src/compiler $(COMPILER_OPTS)

TESTS_ENVIRONMENT = \
env CC=$(CC) COMPILER="$(COMPILER)" $(SHELL)

TESTS =						\
prog-1						\
prog-2						\
prog-3						\
prog-4						\
prog-5						\
prog-6						\
prog-7						\
prog-8						\
prog-9						\
prog-10						\
prog-11						\
prog-12						\
prog-13						\
prog-gcd					\
prog-primes

#XFAIL_TESTS = prog-8
